public class PizzeriaStrasbourg extends Pizzeria{
    public PizzeriaStrasbourg() {
        super(new PizzaFactoryStrasbourg());

    }

}
