@startuml

title __JAVA's Class Diagram__\n


    abstract class Pizza {
        # crust : String
        # garnitures : ArrayList<String>
        # name : String
        # sauce : String
        + couper()
        + cuire()
        + emballer()
        + getNom()
        + preparer()
        + setGarnitures()
        + setName()
    }




    abstract class PizzaFactory {
        {abstract} + creerPizza()
    }




    class PizzaFactoryBrest {
        + creerPizza()
    }




    class PizzaFactoryStrasbourg {
        + creerPizza()
    }




    class PizzaFromageStyleBrest {
        + PizzaFromageStyleBrest()
        + couper()
        + cuire()
        + emballer()
    }


    class PizzaFromageStyleStrasbourg {
        + PizzaFromageStyleStrasbourg()
        + couper()
        + cuire()
        + emballer()
    }




    abstract class Pizzeria {
        + Pizzeria()
        + commanderPizza()
    }




    class PizzeriaBrest {
        + PizzeriaBrest()
    }




    class PizzeriaFactory {
        {static} + insance : PizzeriaFactory
        {static} + creer()
        {static} + getInstance()
    }




    class PizzeriaStrasbourg {
        + PizzeriaStrasbourg()
    }



    Pizzeria ..> Pizza
    PizzeriaFactory ..> Pizzeria
    PizzaFactory ..> Pizza
    PizzaTestDrive ..> Pizza
    PizzaTestDrive ..> PizzeriaFactory

  PizzaFactoryBrest --|> PizzaFactory
  PizzaFactory <|-- PizzaFactoryStrasbourg
  Pizza <|-- PizzaFromageStyleBrest
  PizzaFromageStyleStrasbourg --|> Pizza
  Pizzeria o--> PizzaFactory : fabrique
  PizzeriaBrest --|> Pizzeria
  Pizzeria <|-- PizzeriaStrasbourg


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
